5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1578_1332.log
== TEST (2019-03-20 18:49:30) 
-- CODE:
aresta = 5
area = ((3*aresta)**0.5)*1.5
 
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:49:32) 
-- CODE:
aresta = 5
area = ((3*aresta)**0.5)*1.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.164209
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:49:52) 
-- CODE:
aresta = 5
area = ((3*(aresta)**2)**0.5)*1.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.131151
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:49:55) 
-- CODE:
aresta = 5
area = ((3*(aresta)**2)**0.5)*1.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:50:12) 
-- CODE:
aresta = 5
area = ((3*((aresta)**2))**0.5)*1.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:52:10) 
-- CODE:
aresta = 5
radical= (3**0.5)*(aresta)**2
area = radical*1.5
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:54) 
-- CODE:
aresta = 5
radical= (3)**0.5
area = (radical*((aresta)**2))*1.5
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:09) 
-- CODE:
aresta = 5
radical= (3)**0.5
area = (radical*((aresta)**2))*1.5
print(radical)
print(round(area, 4))
-- OUTPUT:
1.7320508075688772
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:51) 
-- CODE:
aresta = 5

area = (3/2)*((aresta)**2)*((3)**0.5)
print(radical)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(radical)
NameError: name 'radical' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:56) 
-- CODE:
aresta = 5

area = (3/2)*((aresta)**2)*((3)**0.5)

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:01) 
-- CODE:
aresta = 5

area = (3/2)*((aresta)**2)*((3)**0.5)


print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:19) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (3/2)*((aresta)**2)*raiz


print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:46) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (3/2)*((aresta)**2)*raiz

print(aresta**2)
print(round(area, 4))
-- OUTPUT:
25
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:59) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (3/2)*(aresta**2)*raiz

print(aresta**2)
print(round(area, 4))
-- OUTPUT:
25
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:09) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (1.5)*(aresta**2)*raiz

print(aresta**2)
print(round(area, 4))
-- OUTPUT:
25
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:30) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (1.5)*(aresta**2)*raiz

print(aresta**2)
print(raiz)
print(round(area, 4))
-- OUTPUT:
25
1.7320508075688772
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:51) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (1.5)*(aresta**2)*25

print(aresta**2)
print(raiz)
print(round(area, 4))
-- OUTPUT:
25
1.7320508075688772
937.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:10) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = (1.5)*(25)*raiz

print(aresta**2)
print(raiz)
print(round(area, 4))
-- OUTPUT:
25
1.7320508075688772
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:31) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = 3*(25)*raiz

print(aresta**2)
print(raiz)
print(round(area, 4))
-- OUTPUT:
25
1.7320508075688772
129.9038
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:44) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = 1.5*(25)*raiz

print(aresta**2)
print(raiz)
print(round(area, 4))
-- OUTPUT:
25
1.7320508075688772
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:22) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = 1.5*raiz*25

print(aresta**2)
print(raiz)
print(round(area, 4))
-- OUTPUT:
25
1.7320508075688772
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:27) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = 1.5*raiz*25

print(aresta**2)
print(raiz)
print(round(area, 4))
-- EXECUTION TIME:
0.153976
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
25
1.7320508075688772
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:32) 
-- CODE:
aresta = 5
raiz=((3)**0.5)
area = 1.5*raiz*25



print(round(area, 4))
-- EXECUTION TIME:
0.170739
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
